fixed text colors not appearing when in dark mode

--- a/src/components/RecipeList.css
+++ b/src/components/RecipeList.css
@@ -51,3 +51,7 @@
 .recipe-list .card.dark div {
     color: #e4e4e4;
 }
+.error.dark div
+.error.dark p {
+    color: #e4e4e4;
+}
