--- a/src/pages/recipe/Recipe.css
+++ b/src/pages/recipe/Recipe.css
@@ -31,3 +31,8 @@
     background: #555;
     color: #e4e4e4;
 }
+.recipe.dark p,
+.recipe.dark h2,
+.recipe.dark li {
+    color: #e4e4e4;
+}
